RESOLVED FIXED308989
[Site Isolation] Fix ContentFiltering.LoadAlternateAfterAddDataWK2
https://bugs.webkit.org/show_bug.cgi?id=308989
Summary [Site Isolation] Fix ContentFiltering.LoadAlternateAfterAddDataWK2
Sihui Liu
Reported 2026-03-02 10:03:16 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2026-03-02 10:03:57 PST
Sihui Liu
Comment 2 2026-03-02 11:28:51 PST
EWS
Comment 3 2026-03-05 22:44:44 PST
Committed 308778@main (3be92fd3eef6): <https://commits.webkit.org/308778@main> Reviewed commits have been landed. Closing PR #59732 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.